moon fixes better terrain and jumping

--- a/css/styles.css
+++ b/css/styles.css
@@ -37,11 +37,13 @@ h1 {
   height: 100%;
   z-index: -1;
   pointer-events: none;
+  overflow: hidden;
 }
 
 iframe {
   position: relative;
   width: 100%;
+  height: 100%;
 }
 
 content {}
